--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -793,7 +793,7 @@ WARN_LOGFILE           = @DOXYGEN_LOGFILE@
 
 INPUT                  = @srcdir@/../src \
                          @srcdir@/../include \
-                         @srcdir@/../capi
+                         ../capi
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
