Move around syntax to make MSVC happier

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -268,7 +268,7 @@ typedef void (GEOSInterruptCallback)();
 * \return the previously configured callback
 * \see GEOSInterruptCallback
 */
-extern GEOSInterruptCallback* GEOS_DLL GEOS_interruptRegisterCallback(
+extern GEOSInterruptCallback GEOS_DLL *GEOS_interruptRegisterCallback(
     GEOSInterruptCallback* cb);
 
 /**
