--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,11 +16,14 @@ find_package(GEOS 3.9 REQUIRED)
 add_executable(cpp_read cpp_read.cpp)
 target_link_libraries(cpp_read PRIVATE GEOS::geos)
 
-add_executable(capi_read capi_read.cpp)
+add_executable(capi_read capi_read.c)
 target_link_libraries(capi_read PRIVATE GEOS::geos_c)
 
-add_executable(capi_prepared capi_prepared.cpp)
+add_executable(capi_prepared capi_prepared.c)
 target_link_libraries(capi_prepared PRIVATE GEOS::geos_c)
 
-add_executable(capi_read_ts capi_read_ts.cpp)
+add_executable(capi_strtree capi_strtree.c)
+target_link_libraries(capi_strtree PRIVATE GEOS::geos_c)
+
+add_executable(capi_read_ts capi_read_ts.c)
 target_link_libraries(capi_read_ts PRIVATE GEOS::geos_c)
