Exclude vendored libs from GEOS compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,7 @@ set(CMAKE_CXX_FLAGS_COVERAGE "-fprofile-arcs -ftest-coverage")
 # Target geos: C++ API library
 #-----------------------------------------------------------------------------
 add_library(geos "")
-target_link_libraries(geos PUBLIC geos_cxx_flags)
+target_link_libraries(geos PUBLIC geos_cxx_flags PRIVATE ryu)
 add_subdirectory(include)
 add_subdirectory(src)
 
