--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,18 +60,16 @@ init:
 
 before_build:
   - ps: 'Write-Host "Running $env:BUILDER with $env:GENERATOR" -ForegroundColor Magenta'
-  - if "%BUILDER%"=="CMake" cmake.exe -G "%GENERATOR%" -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
-  - if "%BUILDER%"=="NMake" .\autogen.bat
+  - cmake --version
+  - cmake -G "%GENERATOR%" -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
 build_script:
   - ps: 'Write-Host "Running $env:BUILDER:" -ForegroundColor Magenta'
-  - if "%BUILDER%"=="CMake" cmake --build . --config %CONFIGURATION%
-  - if "%BUILDER%"=="NMake" nmake /f makefile.vc
+  - cmake --build . --config %CONFIGURATION%
 
 test_script:
   - ps: 'Write-Host "Running tests:" -ForegroundColor Magenta'
-  - if "%BUILDER%"=="CMake" ctest --output-on-failure -C %CONFIGURATION%
-  - if "%BUILDER%"=="NMake" echo *** NMake does NOT build tests ***
+  - ctest --output-on-failure -C %CONFIGURATION%
 
 # If you need to debug AppVeyor session (https://www.appveyor.com/docs/how-to/rdp-to-build-worker), then:
 # 1. Uncomment the on_finish section below:
