Try again to fix ctest

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -24,6 +24,7 @@ steps:
   - name: check
     image: *test-image
     commands:
+      - cd build
       - ctest --output-on-failure .
   # - name: docs
   #   image: *test-image
