Add LineIntersector perf test

--- a/benchmarks/algorithm/CMakeLists.txt
+++ b/benchmarks/algorithm/CMakeLists.txt
@@ -29,4 +29,11 @@ if (benchmark_FOUND)
             $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
     target_link_libraries(perf_orientation PRIVATE
             benchmark::benchmark geos_cxx_flags)
+
+    add_executable(perf_line_intersector LineIntersectorPerfTest.cpp)
+    target_include_directories(perf_line_intersector PUBLIC
+            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
+    target_link_libraries(perf_line_intersector PRIVATE
+            benchmark::benchmark geos)
 endif()
