Add MonotoneChainBuilder perf test

--- a/benchmarks/index/chain/CMakeLists.txt
+++ b/benchmarks/index/chain/CMakeLists.txt
@@ -18,4 +18,11 @@ IF(benchmark_FOUND)
             $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
     target_link_libraries(perf_monotone_chain PRIVATE
             benchmark::benchmark geos)
+
+    add_executable(perf_monotone_chain_builder MonotoneChainBuilderPerfTest.cpp)
+    target_include_directories(perf_monotone_chain_builder PUBLIC
+            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+            $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
+    target_link_libraries(perf_monotone_chain_builder PRIVATE
+            benchmark::benchmark geos)
 endif()
