Quiet CMake warnings when Benchmark library not found

--- a/benchmarks/algorithm/locate/CMakeLists.txt
+++ b/benchmarks/algorithm/locate/CMakeLists.txt
@@ -11,7 +11,7 @@
 #
 #################################################################################
 
-find_package(benchmark)
+find_package(benchmark QUIET)
 if (benchmark_FOUND)
     add_executable(perf_indexed_point_in_area_locator IndexedPointInAreaLocatorPerfTest.cpp)
     target_include_directories(perf_indexed_point_in_area_locator PUBLIC
