--- a/benchmarks/index/chain/CMakeLists.txt
+++ b/benchmarks/index/chain/CMakeLists.txt
@@ -9,7 +9,7 @@
 # See the COPYING file for more information.
 ################################################################################
 
-find_package(benchmark)
+find_package(benchmark QUIET)
 
 IF(benchmark_FOUND)
     add_executable(perf_monotone_chain MonotoneChainPerfTest.cpp)
