--- a/tests/xmltester/CMakeLists.txt
+++ b/tests/xmltester/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(test_simplewkttester SimpleWKTTester.cpp)
 target_link_libraries(test_simplewkttester PRIVATE geos)
 
 # Setup tinyxml as a separate library so we can avoid picking up GEOS compile flags
-add_library(tinyxml2 OBJECT
+add_library(tinyxml2 STATIC
         tinyxml2/tinyxml2.h
         tinyxml2/tinyxml2.cpp)
 target_compile_options(
