--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,5 +105,27 @@ jobs:
       shell: bash
 
 
+  windows:
+    name: 'Windows (mingw-w64, Debug, 11, x86_64, windows-2019)'
+    runs-on: windows-2019
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - name: 'Check Out'
+      uses: actions/checkout@v2
 
+    - name: 'Setup'
+      uses: msys2/setup-msys2@v2
+      with:
+        install: mingw-w64-x86_64-gcc mingw-w64-x86_64-cmake make
+
+    - name: 'Build'
+      run: |
+       mkdir build
+       cd build
+       cmake --version
+       cmake -DCMAKE_BUILD_TYPE=Debug -G"MSYS Makefiles" ..
+       cmake --build . -j 2
+       ctest --output-on-failure .
 
