Document and test ownership semantics of GEOSSTRtree_insert

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3170,7 +3170,9 @@ extern GEOSSTRtree GEOS_DLL *GEOSSTRtree_create(size_t nodeCapacity);
 * Insert an item into an \ref GEOSSTRtree
 *
 * \param tree the \ref GEOSSTRtree in which the item should be inserted
-* \param g a GEOSGeometry whose envelope corresponds to the extent of 'item'
+* \param g a GEOSGeometry whose envelope corresponds to the extent of 'item'. As of GEOS 3.9, this envelope will be
+ *       copied into the tree and the caller may destroy `g` while the tree is still in use. Before GEOS 3.9, `g`
+ *       must be retained until the tree is destroyed.
 * \param item the item to insert into the tree
 * \note The tree does **not** take ownership of the geometry or the item.
 */
